--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,11 +36,7 @@ on:
       - 'v*'
 
 jobs:
-  gobuilder:
-    runs-on: ubuntu-latest
-
-  
-  build:
+  releaseandpush:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -49,15 +45,6 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
-
-#     - name: Build
-#       run: |
-#         export PATH=/home/runner/go/bin:$PATH
-#         export GIT_COMMIT=$(git rev-list -1 HEAD) 
-#         go build -o releaseImage/server -ldflags "-X main.GitCommit=$GIT_COMMIT" cmds/proxy_server/main.go 
-# #what does -x main.gitcommit=$git_commit mean
-#       env:
-#         GO111MODULE: on
 
     -
       name: Set up QEMU
