--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -11,6 +11,7 @@ builds:
       - linux
     ldflags:
       - -X main.GitCommit={{ .Tag }}
+    main: ./cmds/proxy_server
 
 checksum:
   name_template: 'checksums.txt'
