--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -28,7 +28,7 @@ dockers:
   -
     goos: linux
     goarch: amd64
-    dockerfile: "./releaseImage/Dockerfile"
+    dockerfile: "./releaseDockerfile"
     image_templates:
       - "docker.io/mariobassem/gridproxy:{{ .Tag }}"
 
