--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -9,13 +9,12 @@ builds:
       - CGO_ENABLED=0
     goos:
       - linux
+    goarch: amd64
     ldflags:
-      - -X main.GitCommit={{ .Tag }}
+      - -X main.GitCommit={{ $(git rev-list -1 HEAD) }}
     main: ./cmds/proxy_server
     binary: server
 
-checksum:
-  name_template: 'checksums.txt'
 
 changelog:
   sort: asc
