--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -9,7 +9,8 @@ builds:
       - CGO_ENABLED=0
     goos:
       - linux
-    goarch: amd64
+    goarch:
+      - amd64
     ldflags:
       - -X main.GitCommit={{ $(git rev-list -1 HEAD) }}
     main: ./cmds/proxy_server
